# continuation-screener

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backtest_results/: backtest_summary_2023_to_2026.csv  backtest_summary_2025_to_2026.csv  backtest_trades_2023_to_2026.csv  backtest_trades_2025_to_2026.csv
src/continuation_screener/: trend_screener.py
src/continuation_screener/data/: dailydata.py  indicators.py  intraday_bt.py
src/continuation_screener/screener/: run_screener.py  run_screener_bt.py
src/continuation_screener/simulator/: backtester_oneday.py  entry_exit.py  run_backtester.py
src/continuation_screener/utils/: get_iwv.py
tests/: indicators_test.py  logic_test.py
